--- a/align-text-view-example/build.gradle
+++ b/align-text-view-example/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "me.codeboy.android.aligntextview.example"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0.0"
     }
@@ -31,9 +30,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-//    compile 'me.codeboy.android:align-text-view:2.3.0@aar'
-        compile project (':align-text-view')
-    compile 'me.codeboy.common:base:1.3.3'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    //    compile 'me.codeboy.android:align-text-view:2.3.0@aar'
+    implementation project(':align-text-view')
+    implementation 'me.codeboy.common:base:1.3.3'
 }
