--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+
     repositories {
+        //        maven { url 'http://192.168.1.248:8081/repository/maven-public/' }
+        google()
         jcenter()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
+
 allprojects {
     repositories {
-        mavenLocal()
-        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        //        maven { url 'http://192.168.1.248:8081/repository/maven-public/' }
+        google()
         jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
